--- a/logistic/package.json
+++ b/logistic/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alertify.js": "^1.0.12",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mysql": "^2.18.1"
